Implement load notification and events for <track>. https://bugs.webkit.org/show_bug.cgi?id=71054

Reviewed by Eric Carlson.

Source/WebCore:

Tests: media/track/track-load-error-readyState.html
       media/track/track-load-from-element-readyState.html
       media/track/track-load-from-src-readyState.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadTextTracks):
(WebCore::HTMLMediaElement::loadNextTextTrack):
(WebCore::HTMLMediaElement::trackWasAdded):
(WebCore::HTMLMediaElement::trackWillBeRemoved):
(WebCore::HTMLMediaElement::trackSourceChanged):
* html/HTMLMediaElement.h:
* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::insertedIntoTree):
(WebCore::HTMLTrackElement::willRemove):
(WebCore::HTMLTrackElement::parseMappedAttribute):
(WebCore::HTMLTrackElement::attributeChanged):
* html/HTMLTrackElement.h:
* html/LoadableTextTrack.cpp:
(WebCore::LoadableTextTrack::cueLoadingCompleted):

LayoutTests:

* media/track/track-load-error-readyState-expected.txt: Added.
* media/track/track-load-error-readyState.html: Added.
* media/track/track-load-from-element-readyState-expected.txt: Added.
* media/track/track-load-from-element-readyState.html: Added.
* media/track/track-load-from-src-readyState-expected.txt: Added.
* media/track/track-load-from-src-readyState.html: Added.

Canonical link: https://commits.webkit.org/87359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98736 268f45cc-cd09-0410-ab3c-d52691b4dbfc