Source/WebCore/html/HTMLTrackElement.cpp
@@ -32,6 +32,7 @@
 #include "HTMLMediaElement.h"
 #include "HTMLNames.h"
 #include "Logging.h"
+#include "ScriptEventListener.h"
 
 using namespace std;
 
@@ -59,20 +60,39 @@ void HTMLTrackElement::insertedIntoTree(bool deep)
 {
     HTMLElement::insertedIntoTree(deep);
     Element* parent = parentElement();
-    if (parent && parent->isMediaElement()) {
-        // TODO(annacc):
-        // static_cast<HTMLMediaElement*>(parentNode())->trackWasAdded(this);
-    }
+    if (parent && parent->isMediaElement())
+        static_cast<HTMLMediaElement*>(parentNode())->trackWasAdded(this);
 }
 
 void HTMLTrackElement::willRemove()
 {
     Element* parent = parentElement();
-    if (parent && parent->isMediaElement()) {
-        // TODO(annacc):
-        // static_cast<HTMLMediaElement*>(parentNode())->trackWillBeRemoved(this);
-    }
+    if (parent && parent->isMediaElement())
+        static_cast<HTMLMediaElement*>(parentNode())->trackWillBeRemoved(this);
     HTMLElement::willRemove();
+}
+
+void HTMLTrackElement::parseMappedAttribute(Attribute* attribute)
+{
+    const QualifiedName& attrName = attribute->name();
+    
+    if (attrName == onloadAttr)
+        setAttributeEventListener(eventNames().loadEvent, createAttributeEventListener(this, attribute));
+    else if (attrName == onerrorAttr)
+        setAttributeEventListener(eventNames().errorEvent, createAttributeEventListener(this, attribute));
+    else
+        HTMLElement::parseMappedAttribute(attribute);
+}
+
+void HTMLTrackElement::attributeChanged(Attribute* attr, bool preserveDecls)
+{
+    HTMLElement::attributeChanged(attr, preserveDecls);
+
+    const QualifiedName& attrName = attr->name();
+    if (attrName == srcAttr) {
+        if (!getAttribute(srcAttr).isEmpty() && parentNode())
+            static_cast<HTMLMediaElement*>(parentNode())->trackSourceChanged(this);
+    }
 }
 
 KURL HTMLTrackElement::src() const
