Source/WebCore/html/HTMLTrackElement.h
@@ -60,6 +60,9 @@ private:
     HTMLTrackElement(const QualifiedName&, Document*);
     virtual ~HTMLTrackElement();
 
+    virtual void parseMappedAttribute(Attribute*);
+    virtual void attributeChanged(Attribute*, bool preserveDecls);
+
     virtual void insertedIntoTree(bool);
     virtual void willRemove();
     virtual bool isURLAttribute(Attribute*) const;
